--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "main": "",
   "devDependencies": {
     "autoprefixer": "^6.7.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-env": "^1.1.4",
-    "babel-register": "^6.18.0",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.1",
     "mocha": "^3.2.0",
     "node-sass": "^4.4.0",
