--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.1",
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
     "mocha": "^3.2.0",
     "node-sass": "^4.4.0",
     "postcss-loader": "^1.2.2",
