--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch:pug": "pug ./src/templates --out ./build --watch"
   },
   "dependencies": {
-    "jade": "~1.11.0"
+    "vue": "^2.1.10"
   },
   "main": "",
   "devDependencies": {
