--- a/package.json
+++ b/package.json
@@ -1,39 +1,20 @@
 {
-  "name": "budget",
-  "version": "0.0.0",
+  "name": "hello-world",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --require babel-polyfill --compilers js:babel-register",
-    "build": "webpack && pug ./src/templates --out ./build",
-    "watch": "npm run watch:js & wait",
-    "watch:js": "webpack --progress --watch"
+  "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "react-scripts": "0.8.5"
   },
   "dependencies": {
-    "vue": "^2.1.10"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
-  "main": "",
-  "devDependencies": {
-    "autoprefixer": "^6.7.0",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-es2015-webpack": "^6.4.3",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.14.1",
-    "eslint-config-airbnb-base": "^11.0.1",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "^2.2.0",
-    "file-loader": "^0.10.0",
-    "mocha": "^3.2.0",
-    "node-sass": "^4.4.0",
-    "postcss-loader": "^1.2.2",
-    "postcss-scss": "^0.4.0",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0"
-  },
-  "author": "mitch-rickman",
-  "license": "ISC",
-  "description": ""
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
